# hrfco-service

./: .dockerignore  .dockerignore.optimized  .gitattributes  .gitignore  API_KEY_SETUP.md  CLAUDE_MCP_SETUP.md  CURSOR_SETUP.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.backup  Dockerfile.optimized  ENV_SETUP.md  GITHUB_SECRETS_SETUP.md  GLAMA_SETUP.md  INTELLIGENT_SEARCH_GUIDE.md  MCP_SERVER_INTEGRATION.md  OPENAI_INTEGRATION.md  README.md  TYPESCRIPT_DEPLOYMENT.md  USER_GUIDE.md  analyze-docker-size.py  chatgpt_mcp_config.generated.json  chatgpt_mcp_config.json  chatgpt_mcp_config.optimized.json  claude_mcp_config.json  cleanup_project.ps1  cleanup_simple.ps1  coordinate_utils.py  create-mapping-table.js  cursor_mcp_config.json  deploy.sh  deploy_workflow.py  docker-compose.secure.yml  docker-compose.yml  download-stations.js  env.chatgpt.example  env.example  glama-deployment.yaml  glama-mcp-config.json  (+51 more)
.ailab/: README-Complete-Integration-Guide.md  README-Cursor-MCP-setup.md  README-Final-MCP-Status.md  README-Gemini-SuperClaude-Usage-Guide.md  README-Location-Options.md  README-MCP-setup-complete.md  README-Project-Setup-Guide.md  README-gemini-claude.md  README-superclaude-gemini-integration.md  README.md  claude-config.json  claude_desktop_config.json  claude_integration.py  convert_to_gemini_format.py  create_project_template.py  create_simple_mcp_config.py  gemini-claude.bat  gemini-config.json  gemini_claude_wrapper.py  gemini_integration.py  gemini_mcp_config.py  mcp-server.py  move_to_web.py  new-project.bat  setup-aliases.ps1  (+1 more)
(+79 files in other folders)
